# foodindo-app

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
api_v1/: slack.py  urls.py
