[tool.poetry]
name = "foodindo"
version = "0.1.0"
description = "Reserve spots for lunch at office"
authors = ["libin.mathew <libin.mathew@entri.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
fastapi = "^0.95.1"
aioredis = "^2.0.1"
anyio = "3.6.2"
certifi = "2022.12.7"
click = "8.1.3"
dnspython = "2.3.0" 
email-validator ="2.0.0.post2"
h11 ="0.14.0"
httpcore ="0.17.0"
httptools ="0.5.0"
httpx ="0.24.0"
idna ="3.4"
itsdangerous ="2.1.2"
Jinja2 ="3.1.2"
MarkupSafe ="2.1.2"
orjson ="3.8.11"
pydantic ="1.10.7"
pypng ="0.20220715.0"
PyQRCode ="1.2.1"
python-dotenv ="1.0.0"
python-multipart ="0.0.6"
PyYAML ="6.0"
sniffio ="1.3.0"
starlette ="0.26.1"
typing_extensions ="4.5.0"
ujson ="5.7.0"
uvicorn ="0.22.0"
uvloop ="0.17.0"
watchfiles ="0.19.0"
websockets ="11.0.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
